cambios en la interfaz

--- a/styles.css
+++ b/styles.css
@@ -508,7 +508,7 @@ footer {
   background-color: var(--background-color-section);
   overflow: hidden;
   height: 700px;
-  background-image: url(./pink-yellow-butter-cookies.jpg);
+  background-image: url(./pink-cookies.jpg);
   background-repeat: no-repeat;
   background-size: 100%;
   background-position: center;
