--- a/styles.css
+++ b/styles.css
@@ -21,7 +21,7 @@
     --about-text-h2: #393A34;
     --about-text-p: #FEFEFE;
   
-    --background-product-section: #393A34;
+    --background-product-section: #3C3E3C;
     --product-section-h2: #333;
     --product-section-h3: #555;
     --product-section-p: #555;
@@ -464,6 +464,7 @@ footer {
   align-items: center; /* Centrado vertical dentro de su contenedor */
   padding: 10px;
   transition: opacity 0.6s ease, transform 0.6s ease;
+  text-transform: uppercase;
 }
 
 .title-section-v h2{
@@ -478,6 +479,12 @@ footer {
   padding: 10px;
   text-align: center;
   background-color: var(--background-color-secondary);
+}
+
+.additional-content img{
+  object-fit: cover;
+  width: 100%;
+  height: 20px;
 }
 
 .about-text h2 {
@@ -524,7 +531,7 @@ footer {
 .choose-us-text h2 {
   font-size: 2.5em;
   font-weight: 700;
-  margin-bottom: 1em;
+  /* margin-bottom: 1em; */
   color: var(--choose-us-text-h2);
 }
 
@@ -548,6 +555,14 @@ footer {
   max-width: 100%;
   height: auto;
   border-radius: 8px;
+}
+
+.choose-img img{
+  object-fit: cover;
+  width: 100%;
+  height: 10px;
+  margin-top: 20px;
+  margin-bottom: 10px;
 }
 
 /* Ajustes responsivos */
@@ -759,6 +774,8 @@ nav .hamburger span {
   margin: 0;
   text-align: center;
   flex-grow: 1;
+  text-transform: uppercase;
+  font-weight: 900;
 }
 
 .title-section img {
@@ -958,7 +975,7 @@ nav .hamburger span {
   }
 
   .title-section h1 {
-    font-size: 2.5rem;
+    font-size: 2rem;
   }
   
   .title-section img {
