--- a/styles.css
+++ b/styles.css
@@ -48,11 +48,35 @@ body {
 }
 
 .navbar {
-    height: 60px;
+    height: 50px;
     display: flex;
     align-items: center;
     padding: 0 20px;
     background-color: var(--color_nav);
+}
+
+.papeltapiz-nav{
+  width: 100vw; 
+  height: 100px;
+  background-image: url(./papeltapiz.png);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  top: 50px;
+  position: absolute;
+  left: -1px;
+  background-color: #3C3E3C;
+}
+
+.papeltapiz-nav-img {
+  width: 350px;
+  margin:0 auto;
+  padding-top: 9px;
+}
+
+.papeltapiz-nav-img img{
+  object-fit: contain; 
+  width: 100%;
 }
   
  /* Logo en el header */
@@ -64,9 +88,9 @@ body {
 
 /* Ajustes para pantallas más grandes */
 @media (min-width: 768px) {
-  .navbar {
+  /* .navbar {
       height: 80px; 
-  }
+  } */
 
   .logo img {
       max-height: 60px;
@@ -484,7 +508,7 @@ footer {
 .additional-content img{
   object-fit: cover;
   width: 100%;
-  height: 20px;
+  height: 12px;
 }
 
 .about-text h2 {
@@ -621,6 +645,7 @@ nav .hamburger span {
 
   .navbar .menu.active {
       display: flex;
+      z-index: 1;
   }
 
   .navbar .hamburger {
